# cmweb

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: DESKTOP.md  README.md  UI-DESIGN-GUIDE.md
src/: ChatApp.container.tsx  ChatApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  types.ts
src/components/: DirectoryPicker.tsx  FontSettingsControl.tsx  ImageViewer.tsx  Modal.tsx  ShikiCode.tsx  ToolAuthModal.tsx
src/components/chat/: ChatAppView.tsx  ChatAppView.types.ts  ChatComposer.tsx  ChatComposer.types.ts  ChatPermissionControl.tsx  ChatSidebar.tsx  ChatSidebar.types.ts  ExtensionPanel.tsx  StreamingStats.tsx  TodoFloatingPanel.tsx
src/components/directory-picker/: DirectoryPicker.types.ts  DirectoryPickerView.tsx  DirectoryPickerView.types.ts
src/components/titlebar/: TitleBar.tsx
src/components/tool-auth/: PermissionModeSelector.tsx  ToolAuthModal.tsx
src/components/ui/: aurora-background.tsx  background-gradient.tsx  button.tsx  code-block.tsx  comet-card.tsx  field.tsx  input.tsx  marble-background.tsx  placeholders-and-vanish-input.tsx  sidebar.tsx  switch.tsx
src/hooks/: use-chat-controller.ts  use-directory-picker.ts  use-file-explorer.ts  use-font-settings.tsx  useAutoUpdate.ts
src/lib/: platform.ts
src/services/: chat-api.ts
src/types/: chat-ui.ts  chat.ts  permissions.ts  tool-auth.ts
src/utils/: chat.ts  todos.ts  tool-auth.ts  tool-payload.ts
(+12 files in other folders)
